--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,19 @@
   <li>
     <h4>
       <b>Email :</b
-      ><span style="font-weight: normal"> ce1240096@civil.iitd.ac.in</span>
+      ><span style="font-weight: normal"> Mai Nhi Bataunga</span>
     </h4>
   </li>
   <li>
     <h4>
-      <b>Mobile No.: </b><span style="font-weight: normal">6375263588</span>
+      <b>Mobile No.: </b><span style="font-weight: normal">6375guesstherest</span>
     </h4>
   </li>
   <li>
     <h4>
       <b>Address: </b
       ><span style="font-weight: normal"
-        >124, Vivekanand Nagar, Kota, Rajasthan</span
+        >Kabhi aao Haveli pe</span
       >
     </h4>
   </li>
